conservator_macro/tests/fail/createable-for-enum.rs
use conservator_macro::Creatable;

#[derive(Creatable)]
pub enum NotSupport {
    A,
    B,
}

fn main() {}
